--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Mood Tracker HW2020</string>
+    <string name="enter_a_password">Enter a Password:</string>
 </resources>
