added a stress spinner

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="emotion_sad">Sad</string>
     <string name="emotion_tired">Tired</string>
     <string name="string_submit">Submit</string>
+    <string name="emotion_stress">Stressed</string>
 
     <string-array name="numbers">
         <item>1</item>
