--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="emotion_stress">Stressed</string>
     <string name="username_hint">Enter a Username:</string>
     <string name="mood_history">Your Mood History</string>
+    <string name="back">back</string>
 
     <string-array name="numbers">
         <item>1</item>
